task1 folder class left to make a change

--- a/task1/index.html
+++ b/task1/index.html
@@ -42,10 +42,14 @@
             <div class="left">
                 <form action="">
                     <h2>Sign Up for Free</h2>
-                    <input type="text" placeholder="Full name">
+                    <input type="text" placeholder="Full name" required="">
                     <input type="email" placeholder="Email">
                     <input type="email" placeholder="Email">
-                    <input type="text" placeholder="Type">
+                    <select>  
+                        <option value="Course">Type</option>  
+                        <option value="BCA">Male</option>  
+                        <option value="BBA">Female</option>  
+                        </select>  
                     <button type="submit">Register</button>
                 </form>
             </div>
